# FlowLib

./: CMakeLists.txt  main.cpp
definitions/: definitions.h
include/: timer.h
include/callbacks/: callback.h  callback_connector.h  callback_handler.h  callback_handler_base.h  callback_list.h  signal.h  slot.h
include/coroutines/: coroutine.h  coroutine_type.h
include/coroutines/core/: coro_core.h
include/coroutines/launcher/: launcher.h  launcher_derived.h  result.h
include/coroutines/promises/: promise.h  promise_base.h
include/coroutines/thread/: thread_launcher.h
include/logger/: log.h  log_list.h  log_writer.h
include/structs/: thread_safe_queue.h
include/system/: system.h
include/utils/: date_time.h
src/coroutines/core/: coro_core.cpp
src/coroutines/launcher/: launcher.cpp
src/coroutines/thread/: thread_launcher.cpp
tests/: callback_test.cpp
